fix:overflow-x

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,10 +27,11 @@
   --text-color: #1E0834;
 }
 
-body {
+html, body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden
 }
 /* 
 .custom-border {
